keval.css
    * {
    box-sizing: border-box;
}

body {
    background-image: url(img/banner.png);
    background-repeat: no-repeat;
    background-size: 133% 100vh;
    background-position: top;
    font-family: 'Papyrus';
    color: white;
    padding: 0;
    margin: 0;
}

#overlay {
    position: fixed;
    width: 100%;
    height: 100vh;
    opacity: 0;
    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.3));
    transition: opacity 0.3s;
    z-index: 0;
}

#overlay:hover {
    opacity: 0.2;
}

#window-size-overlay {
    position: fixed;
    background-color: white;
    height: 100vh;
    width: 100%;
    display: none;
    justify-content: center;
    color: #000000 !important;
    font-family: 'Courier New', Courier, monospace;
    box-sizing: content-box;
}

#window-size-overlay center {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#header-container {
    width: 100%;
    height: 50px;
    background-color: rgba(4, 1, 1, 0.5);
    display: flex;
    justify-content: center;
    transition: background-color 0.2s;
}

#header-container:hover {
    background-color: rgba(4, 1, 1, 0.8);
}

.header-item {
    width: 50px;
    height: 50px;
    margin-left: 5px;
    margin-right: 5px;
    display: block;
    text-align: center;
    font-size: 30px;
    line-height: 50px;
    color: #F2F0F0;
    background-color: rgba(128, 128, 128, 0);
    transition: background-color 0.3s;
}

.header-item:hover {
    background-color: rgba(128, 128, 128, 0.2);
}

.header-logo {
    margin-left: 5px;
    margin-right: 5px;
}

.header-item img, .header-logo img {
    height: 50px;
    width: 50px;
    cursor: pointer;
}

.jumpscare {
    display: none;
}

.jumpscare, .jumpscare img {
    position: fixed;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100%;
}

@media screen and (max-width: 800px) {
    /*#header-container {
        justify-content: center;
    }

    #header-logo, #header-item {
        margin-left: 5px;
        margin-right: 5px;
    }*/
}

@keyframes jumpscareFadeOut {
    0% {
        opacity: 1;
    }

    40% {
        opacity: 1;
    }

    100% {
        opacity: 0;
        display: none;
    }

}

